--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@
           <div class="row">
             <div class="col-12">
               <span class="d-flex align-items-center purchase-popup">
-                <p>Like what you see? Check out our premium version for more.</p>
-                <a href="https://github.com/BootstrapDash/PurpleAdmin-Free-Admin-Template" target="_blank" class="btn ml-auto download-button">Download Free Version</a>
-                <a href="https://www.bootstrapdash.com/product/purple-bootstrap-4-admin-template/" target="_blank" class="btn purchase-button">Upgrade To Pro</a>
+                <p>Have an email?</p>
+                <!--a-- href="https://github.com/BootstrapDash/PurpleAdmin-Free-Admin-Template" target="_blank" class="btn ml-auto download-button">Download Free Version</a-->
+                <a href="https://www.bootstrapdash.com/product/purple-bootstrap-4-admin-template/" target="_blank" class="btn ml-auto  purchase-button">Open the email client</a>
                 <i class="mdi mdi-close popup-dismiss"></i>
               </span>
             </div>
@@ -292,7 +292,7 @@
               <span class="page-title-icon bg-gradient-primary text-white mr-2">
                 <i class="mdi mdi-home"></i>                 
               </span>
-              Dashboard
+              Real-time phishing report
             </h3>
             <nav aria-label="breadcrumb">
               <ul class="breadcrumb">
@@ -308,10 +308,10 @@
               <div class="card bg-gradient-danger card-img-holder text-white">
                 <div class="card-body">
                   <img src="images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image"/>
-                  <h4 class="font-weight-normal mb-3">Weekly Sales
+                  <h4 class="font-weight-normal mb-3">Reported cases
                     <i class="mdi mdi-chart-line mdi-24px float-right"></i>
                   </h4>
-                  <h2 class="mb-5">$ 15,0000</h2>
+                  <h2 class="mb-5">6584</h2>
                   <h6 class="card-text">Increased by 60%</h6>
                 </div>
               </div>
@@ -320,11 +320,11 @@
               <div class="card bg-gradient-info card-img-holder text-white">
                 <div class="card-body">
                   <img src="images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image"/>                  
-                  <h4 class="font-weight-normal mb-3">Weekly Orders
+                  <h4 class="font-weight-normal mb-3">Flagged emails
                     <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
                   </h4>
-                  <h2 class="mb-5">45,6334</h2>
-                  <h6 class="card-text">Decreased by 10%</h6>
+                  <h2 class="mb-5">45,634</h2>
+                  <h6 class="card-text">Increased by 10%</h6>
                 </div>
               </div>
             </div>
@@ -332,38 +332,38 @@
               <div class="card bg-gradient-success card-img-holder text-white">
                 <div class="card-body">
                   <img src="images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image"/>                                    
-                  <h4 class="font-weight-normal mb-3">Visitors Online
+                  <h4 class="font-weight-normal mb-3">False positives
                     <i class="mdi mdi-diamond mdi-24px float-right"></i>
                   </h4>
-                  <h2 class="mb-5">95,5741</h2>
-                  <h6 class="card-text">Increased by 5%</h6>
+                  <h2 class="mb-5">32</h2>
+                  <h6 class="card-text">Decreased by 35%</h6>
                 </div>
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-7 grid-margin stretch-card">
+            <div class="col-md-6 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
                   <div class="clearfix">
-                    <h4 class="card-title float-left">Visit And Sales Statistics</h4>
+                    <h4 class="card-title float-left">Trending "fishy" keywords in June</h4>
                     <div id="visit-sale-chart-legend" class="rounded-legend legend-horizontal legend-top-right float-right"></div>                                     
                   </div>
                   <canvas id="visit-sale-chart" class="mt-4"></canvas>
                 </div>
               </div>
             </div>
-            <div class="col-md-5 grid-margin stretch-card">
+            <div class="col-md-6 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">Traffic Sources</h4>
+                  <h4 class="card-title">Training report</h4>
                   <canvas id="traffic-chart"></canvas>
                   <div id="traffic-chart-legend" class="rounded-legend legend-vertical legend-bottom-left pt-4"></div>                                                      
                 </div>
               </div>
             </div>
           </div>
-          <div class="row">
+          <!--div class="row">
             <div class="col-12 grid-margin">
               <div class="card">
                 <div class="card-body">
@@ -508,12 +508,12 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div-->
           <div class="row">
             <div class="col-md-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">Project Status</h4>
+                  <h4 class="card-title">Top reporters</h4>
                   <div class="table-responsive">
                     <table class="table">
                       <thead>
@@ -525,10 +525,10 @@
                             Name
                           </th>
                           <th>
-                            Due Date
+                            Cases Reported
                           </th>
                           <th>
-                            Progress
+                            Contribution
                           </th>
                         </tr>
                       </thead>
@@ -541,11 +541,11 @@
                             Herman Beck
                           </td>
                           <td>
-                            May 15, 2015
+                            324
                           </td>
                           <td>
                             <div class="progress">
-                              <div class="progress-bar bg-gradient-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                              <div class="progress-bar bg-gradient-success" role="progressbar" style="width: 38%" aria-valuenow="38" aria-valuemin="0" aria-valuemax="38"></div>
                             </div>
                           </td>
                         </tr>
@@ -557,11 +557,11 @@
                             Messsy Adam
                           </td>
                           <td>
-                            Jul 01, 2015
+                            236
                           </td>
                           <td>
                             <div class="progress">
-                              <div class="progress-bar bg-gradient-danger" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                              <div class="progress-bar bg-gradient-danger" role="progressbar" style="width: 28%" aria-valuenow="28" aria-valuemin="0" aria-valuemax="28"></div>
                             </div>
                           </td>
                         </tr>
@@ -573,11 +573,11 @@
                             John Richards
                           </td>
                           <td>
-                            Apr 12, 2015
+                            142
                           </td>
                           <td>
                             <div class="progress">
-                              <div class="progress-bar bg-gradient-warning" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                              <div class="progress-bar bg-gradient-warning" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="25"></div>
                             </div>
                           </td>
                         </tr>
@@ -589,11 +589,11 @@
                             Peter Meggik
                           </td>
                           <td>
-                            May 15, 2015
+                            89
                           </td>
                           <td>
                             <div class="progress">
-                              <div class="progress-bar bg-gradient-primary" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                              <div class="progress-bar bg-gradient-primary" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="10"></div>
                             </div>
                           </td>
                         </tr>
@@ -605,11 +605,11 @@
                             Edward
                           </td>
                           <td>
-                            May 03, 2015
+                           12
                           </td>
                           <td>
                             <div class="progress">
-                              <div class="progress-bar bg-gradient-danger" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
+                              <div class="progress-bar bg-gradient-danger" role="progressbar" style="width: 7%" aria-valuenow="7" aria-valuemin="0" aria-valuemax="7"></div>
                             </div>
                           </td>
                         </tr>
@@ -621,11 +621,11 @@
                             Ronald
                           </td>
                           <td>
-                            Jun 05, 2015
+                            5
                           </td>
                           <td>
                             <div class="progress">
-                              <div class="progress-bar bg-gradient-info" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                              <div class="progress-bar bg-gradient-info" role="progressbar" style="width: 5%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="5"></div>
                             </div>
                           </td>
                         </tr>
