--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-        <a class="navbar-brand brand-logo" href="index.html"><img src="images/logo.svg" alt="logo"/></a>
+        <a class="navbar-brand brand-logo" href="index.html"><img src="images/logo_new.jpeg" alt="logo"/></a>
         <a class="navbar-brand brand-logo-mini" href="index.html"><img src="images/logo-mini.svg" alt="logo"/></a>
       </div>
       <div class="navbar-menu-wrapper d-flex align-items-stretch">
@@ -197,12 +197,12 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="../../index.html">
               <span class="menu-title">Dashboard</span>
               <i class="mdi mdi-home menu-icon"></i>
             </a>
           </li>
-          <li class="nav-item">
+          <!--li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
               <span class="menu-title">UI Elements</span>
               <i class="menu-arrow"></i>
@@ -214,32 +214,32 @@
                 <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Typography</a></li>
               </ul>
             </div>
-          </li>
-          <li class="nav-item">
+          </li-->
+          <!--li class="nav-item">
             <a class="nav-link" href="pages/icons/mdi.html">
               <span class="menu-title">Icons</span>
               <i class="mdi mdi-contacts menu-icon"></i>
             </a>
-          </li>
+          </li-->
           <li class="nav-item">
             <a class="nav-link" href="pages/forms/basic_elements.html">
-              <span class="menu-title">Forms</span>
+              <span class="menu-title">Import training data</span>
               <i class="mdi mdi-format-list-bulleted menu-icon"></i>
             </a>
           </li>
-          <li class="nav-item">
+          <!--li class="nav-item">
             <a class="nav-link" href="pages/charts/chartjs.html">
               <span class="menu-title">Charts</span>
               <i class="mdi mdi-chart-bar menu-icon"></i>
             </a>
-          </li>
+          </li-->
           <li class="nav-item">
             <a class="nav-link" href="pages/tables/basic-table.html">
-              <span class="menu-title">Tables</span>
+              <span class="menu-title">Intercept Logs</span>
               <i class="mdi mdi-table-large menu-icon"></i>
             </a>
           </li>
-          <li class="nav-item">
+          <!--li class="nav-item">
             <a class="nav-link" data-toggle="collapse" href="#general-pages" aria-expanded="false" aria-controls="general-pages">
               <span class="menu-title">Sample Pages</span>
               <i class="menu-arrow"></i>
@@ -254,8 +254,8 @@
                 <li class="nav-item"> <a class="nav-link" href="pages/samples/error-500.html"> 500 </a></li>
               </ul>
               </div>
-          </li>
-          <li class="nav-item sidebar-actions">
+          </li-->
+          <!--li class="nav-item sidebar-actions">
             <span class="nav-link">
               <div class="border-bottom">
                 <h6 class="font-weight-normal mb-3">Projects</h6>                
@@ -271,7 +271,7 @@
                 </ul>
               </div>
             </span>
-          </li>
+          </li-->
         </ul>
       </nav>
       <!-- partial -->
