--- a/pages/charts/chartjs.html
+++ b/pages/charts/chartjs.html
@@ -230,12 +230,12 @@
     <i class="mdi mdi-format-list-bulleted menu-icon"></i>
   </a>
 </li>
-<!--li class="nav-item">
-  <a class="nav-link" href="pages/charts/chartjs.html">
-    <span class="menu-title">Charts</span>
+<li class="nav-item">
+  <a class="nav-link" href="../charts/chartjs.html">
+    <span class="menu-title">Victims Demographics</span>
     <i class="mdi mdi-chart-bar menu-icon"></i>
   </a>
-</li-->
+</li>
 <li class="nav-item">
   <a class="nav-link" href="pages/tables/basic-table.html">
     <span class="menu-title">Intercept Logs</span>
@@ -300,12 +300,12 @@
         <div class="content-wrapper">
           <div class="page-header">
             <h3 class="page-title">
-              Chart-js
+              Victims Demographics
             </h3>
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="#">Charts</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Chart-js</li>
+                <li class="breadcrumb-item active" aria-current="page">Victims Demographics</li>
               </ol>
             </nav>
           </div>
@@ -313,7 +313,7 @@
             <div class="col-lg-6 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">Line chart</h4>
+                  <h4 class="card-title">Time of Day</h4>
                   <canvas id="lineChart" style="height:250px"></canvas>
                 </div>
               </div>
@@ -321,7 +321,7 @@
             <div class="col-lg-6 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">Bar chart</h4>
+                  <h4 class="card-title">Categories</h4>
                   <canvas id="barChart" style="height:230px"></canvas>
                 </div>
               </div>
