--- a/pages/forms/basic_elements.html
+++ b/pages/forms/basic_elements.html
@@ -228,12 +228,12 @@
     <i class="mdi mdi-format-list-bulleted menu-icon"></i>
   </a>
 </li>
-<!--li class="nav-item">
-  <a class="nav-link" href="pages/charts/chartjs.html">
-    <span class="menu-title">Charts</span>
-    <i class="mdi mdi-chart-bar menu-icon"></i>
-  </a>
-</li-->
+          <li class="nav-item">
+            <a class="nav-link" href="../charts/chartjs.html">
+              <span class="menu-title">Victims Demographics</span>
+              <i class="mdi mdi-chart-bar menu-icon"></i>
+            </a>
+          </li>
 <li class="nav-item">
   <a class="nav-link" href="../tables/basic-table.html">
     <span class="menu-title">Intercept Logs</span>
@@ -298,17 +298,17 @@
         <div class="content-wrapper">
           <div class="page-header">
             <h3 class="page-title">
-              Forms
+              Import training data
             </h3>
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="#">Forms</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Basic elements</li>
+                <li class="breadcrumb-item active" aria-current="page">Import training data</li>
               </ol>
             </nav>
           </div>
           <div class="row">
-            <div class="col-md-6 grid-margin stretch-card">
+            <!--div class="col-md-6 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
                   <h4 class="card-title">Default form</h4>
@@ -393,50 +393,20 @@
                   </form>
                 </div>
               </div>
-            </div>
+            </div-->
             <div class="col-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">Basic form elements</h4>
-                  <p class="card-description">
-                    Basic form elements
-                  </p>
+                  <h4 class="card-title">Paste Email Here</h4>
+
                   <form class="forms-sample">
                     <div class="form-group">
-                      <label for="exampleInputName1">Name</label>
+                      <label for="exampleInputName1">Email title</label>
                       <input type="text" class="form-control" id="exampleInputName1" placeholder="Name">
                     </div>
+
                     <div class="form-group">
-                      <label for="exampleInputEmail3">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                      <label for="exampleInputPassword4">Password</label>
-                      <input type="password" class="form-control" id="exampleInputPassword4" placeholder="Password">
-                    </div>
-                    <div class="form-group">
-                      <label for="exampleSelectGender">Gender</label>
-                        <select class="form-control" id="exampleSelectGender">
-                          <option>Male</option>
-                          <option>Female</option>
-                        </select>
-                      </div>
-                    <div class="form-group">
-                      <label>File upload</label>
-                      <input type="file" name="img[]" class="file-upload-default">
-                      <div class="input-group col-xs-12">
-                        <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Image">
-                        <span class="input-group-append">
-                          <button class="file-upload-browse btn btn-gradient-primary" type="button">Upload</button>
-                        </span>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label for="exampleInputCity1">City</label>
-                      <input type="text" class="form-control" id="exampleInputCity1" placeholder="Location">
-                    </div>
-                    <div class="form-group">
-                      <label for="exampleTextarea1">Textarea</label>
+                      <label for="exampleTextarea1">Email body</label>
                       <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
                     </div>
                     <button type="submit" class="btn btn-gradient-primary mr-2">Submit</button>
@@ -445,7 +415,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 grid-margin stretch-card">
+            <!--div class="col-md-6 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
                   <h4 class="card-title">Input size</h4>
@@ -900,7 +870,7 @@
                   </form>
                 </div>
               </div>
-            </div>
+            </div-->
           </div>
         </div>
         <!-- content-wrapper ends -->
