--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
               <i class="mdi mdi-format-list-bulleted menu-icon"></i>
             </a>
           </li>
-          <!--li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="pages/charts/chartjs.html">
-              <span class="menu-title">Charts</span>
+              <span class="menu-title">Victims Demographics</span>
               <i class="mdi mdi-chart-bar menu-icon"></i>
             </a>
-          </li-->
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="pages/tables/basic-table.html">
               <span class="menu-title">Intercept Logs</span>
