--- a/pages/tables/basic-table.html
+++ b/pages/tables/basic-table.html
@@ -231,12 +231,12 @@
     <i class="mdi mdi-format-list-bulleted menu-icon"></i>
   </a>
 </li>
-<!--li class="nav-item">
-  <a class="nav-link" href="pages/charts/chartjs.html">
-    <span class="menu-title">Charts</span>
+<li class="nav-item">
+  <a class="nav-link" href="../charts/chartjs.html">
+    <span class="menu-title">Victims Demographics</span>
     <i class="mdi mdi-chart-bar menu-icon"></i>
   </a>
-</li-->
+</li>
 <li class="nav-item">
   <a class="nav-link" href="basic-table.html">
     <span class="menu-title">Intercept Logs</span>
@@ -301,12 +301,12 @@
         <div class="content-wrapper">
           <div class="page-header">
             <h3 class="page-title">
-              Basic Tables
+              Intercept Logs
             </h3>
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="#">Tables</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Basic tables</li>
+                <li class="breadcrumb-item active" aria-current="page">Intercept Logs</li>
               </ol>
             </nav>
           </div>
@@ -314,15 +314,15 @@
             <div class="col-lg-6 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">Basic Table</h4>
+                  <h4 class="card-title">Reported cases</h4>
                   <p class="card-description">
-                    Add class <code>.table</code>
+                    Emails forwarded to catch-all email
                   </p>
-                  <table class="table">
+                  <table class="table table-hover">
                     <thead>
                       <tr>
-                        <th>Profile</th>
-                        <th>VatNo.</th>
+                        <th>User</th>
+                        <th>Title</th>
                         <th>Created</th>
                         <th>Status</th>
                       </tr>
@@ -330,33 +330,33 @@
                     <tbody>
                       <tr>
                         <td>Jacob</td>
-                        <td>53275531</td>
-                        <td>12 May 2017</td>
-                        <td><label class="badge badge-danger">Pending</label></td>
+                        <td>Alert: action wanted</td>
+                        <td>12 June 2019</td>
+                        <td><label class="badge badge-danger">Auto comfirmed</label></td>
                       </tr>
                       <tr>
                         <td>Messsy</td>
-                        <td>53275532</td>
-                        <td>15 May 2017</td>
-                        <td><label class="badge badge-warning">In progress</label></td>
+                        <td>RE: security issues found</td>
+                        <td>12 June 2019</td>
+                        <td><label class="badge badge-warning">Await manual confirmation</label></td>
                       </tr>
                       <tr>
                         <td>John</td>
-                        <td>53275533</td>
-                        <td>14 May 2017</td>
-                        <td><label class="badge badge-info">Fixed</label></td>
+                        <td>NN1 for annual report</td>
+                        <td>12 June 2019</td>
+                        <td><label class="badge badge-danger">Auto comfirmed</label></td>
                       </tr>
                       <tr>
                         <td>Peter</td>
-                        <td>53275534</td>
-                        <td>16 May 2017</td>
-                        <td><label class="badge badge-success">Completed</label></td>
+                        <td>Payment awaiting confirmation</td>
+                        <td>12 June 2019</td>
+                        <td><label class="badge badge-danger">Auto comfirmed</label></td>
                       </tr>
                       <tr>
                         <td>Dave</td>
-                        <td>53275535</td>
-                        <td>20 May 2017</td>
-                        <td><label class="badge badge-warning">In progress</label></td>
+                        <td>Incoming payment and cheque</td>
+                        <td>10 June 2017</td>
+                        <td><label class="badge badge-danger">Auto comfirmed</label></td>
                       </tr>
                     </tbody>
                   </table>
@@ -366,56 +366,51 @@
             <div class="col-lg-6 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <h4 class="card-title">Hoverable Table</h4>
+                  <h4 class="card-title">Intercepted</h4>
                   <p class="card-description">
-                    Add class <code>.table-hover</code>
+                    Emails automatically intercepted with our rules
                   </p>
                   <table class="table table-hover">
                     <thead>
                       <tr>
-                        <th>User</th>
-                        <th>Product</th>
-                        <th>Sale</th>
-                        <th>Status</th>
+                        <th>Title</th>
+                        <th>Sender</th>
+                        <th>Created</th>
+
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
-                        <td>Jacob</td>
-                        <td>Photoshop</td>
-                        <td class="text-danger"> 28.76% <i class="mdi mdi-arrow-down"></i></td>
-                        <td><label class="badge badge-danger">Pending</label></td>
+                        <td>Your e-Advice is ready</td>
+                        <td>i098business@hsbk.com</td>
+                        <td>10 June 2017</td>
                       </tr>
                       <tr>
-                        <td>Messsy</td>
-                        <td>Flash</td>
-                        <td class="text-danger"> 21.06% <i class="mdi mdi-arrow-down"></i></td>
-                        <td><label class="badge badge-warning">In progress</label></td>
+                        <td>Your e-Advice is ready</td>
+                        <td>i098business@hsbk.com</td>
+                        <td>10 June 2017</td>
                       </tr>
                       <tr>
-                        <td>John</td>
-                        <td>Premier</td>
-                        <td class="text-danger"> 35.00% <i class="mdi mdi-arrow-down"></i></td>
-                        <td><label class="badge badge-info">Fixed</label></td>
+                        <td>Your e-Advice is ready</td>
+                        <td>i098business@hsbk.com</td>
+                        <td>10 June 2017</td>
                       </tr>
                       <tr>
-                        <td>Peter</td>
-                        <td>After effects</td>
-                        <td class="text-success"> 82.00% <i class="mdi mdi-arrow-up"></i></td>
-                        <td><label class="badge badge-success">Completed</label></td>
+                        <td>Your e-Advice is ready</td>
+                        <td>i098business@hsbk.com</td>
+                        <td>10 June 2017</td>
                       </tr>
                       <tr>
-                        <td>Dave</td>
-                        <td>53275535</td>
-                        <td class="text-success"> 98.05% <i class="mdi mdi-arrow-up"></i></td>
-                        <td><label class="badge badge-warning">In progress</label></td>
+                        <td>Your e-Advice is ready</td>
+                        <td>i098business@hsbk.com</td>
+                        <td>10 June 2017</td>
                       </tr>
                     </tbody>
                   </table>
                 </div>
               </div>
             </div>
-            <div class="col-lg-12 grid-margin stretch-card">
+            <!--div class="col-lg-12 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
                   <h4 class="card-title">Striped Table</h4>
@@ -990,7 +985,7 @@
                       </tr>
                     </tbody>
                   </table>
-                </div>
+                </div-->
               </div>
             </div>
           </div>
