--- a/pages/charts/chartjs.html
+++ b/pages/charts/chartjs.html
@@ -314,6 +314,9 @@
               <div class="card">
                 <div class="card-body">
                   <h4 class="card-title">Time of Day</h4>
+                  <p class="card-description">
+                    No. of emails opened
+                  </p>
                   <canvas id="lineChart" style="height:250px"></canvas>
                 </div>
               </div>
@@ -322,6 +325,9 @@
               <div class="card">
                 <div class="card-body">
                   <h4 class="card-title">Categories</h4>
+                  <p class="card-description">
+                    Categories of emails opened
+                  </p>
                   <canvas id="barChart" style="height:230px"></canvas>
                 </div>
               </div>
