--- a/pages/charts/chartjs.html
+++ b/pages/charts/chartjs.html
@@ -333,7 +333,7 @@
               </div>
             </div>
           </div>
-          <div class="row">
+          <!--div class="row">
             <div class="col-lg-6 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
@@ -368,7 +368,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div-->
         </div>
         <!-- content-wrapper ends -->
         <!-- partial:../../partials/_footer.html -->
