--- a/pages/charts/chartjs.html
+++ b/pages/charts/chartjs.html
@@ -225,7 +225,7 @@
   </a>
 </li-->
 <li class="nav-item">
-  <a class="nav-link" href="pages/forms/basic_elements.html">
+  <a class="nav-link" href="../forms/basic_elements.html">
     <span class="menu-title">Import training data</span>
     <i class="mdi mdi-format-list-bulleted menu-icon"></i>
   </a>
@@ -237,7 +237,7 @@
   </a>
 </li>
 <li class="nav-item">
-  <a class="nav-link" href="pages/tables/basic-table.html">
+  <a class="nav-link" href="../tables/basic-table.html">
     <span class="menu-title">Intercept Logs</span>
     <i class="mdi mdi-table-large menu-icon"></i>
   </a>
