pipelines and more charts

--- a/pages/charts/chartjs.html
+++ b/pages/charts/chartjs.html
@@ -276,23 +276,23 @@
   </span>
 </li-->
 
-          <!--li class="nav-item sidebar-actions">
+          <li class="nav-item sidebar-actions">
             <span class="nav-link">
               <div class="border-bottom">
-                <h6 class="font-weight-normal mb-3">Projects</h6>
+                <h6 class="font-weight-normal mb-3">Pipelines</h6>
               </div>
-              <button class="btn btn-block btn-lg btn-gradient-primary mt-4">+ Add a project</button>
+              <button class="btn btn-block btn-lg btn-gradient-primary mt-4">+ Add a pipeline</button>
               <div class="mt-4">
                 <div class="border-bottom">
-                  <p class="text-secondary">Categories</p>
+                  <p class="text-secondary">Running</p>
                 </div>
                 <ul class="gradient-bullet-list mt-4">
-                  <li>Free</li>
-                  <li>Pro</li>
+                  <li>Accounting dept.</li>
+                  <li>Trading dept.</li>
                 </ul>
               </div>
             </span>
-          </li-->
+          </li>
         </ul>
       </nav>
       <!-- partial -->
@@ -301,7 +301,9 @@
           <div class="page-header">
             <h3 class="page-title">
               Victims Demographics
+              <button class="btn btn-sm btn-gradient-primary">Download victims list and categories</button>
             </h3>
+
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="#">Charts</a></li>
@@ -350,7 +352,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div-->
           <div class="row">
             <div class="col-lg-6 grid-margin stretch-card">
               <div class="card">
@@ -360,7 +362,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6 grid-margin stretch-card">
+            <!--div class="col-lg-6 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
                   <h4 class="card-title">Scatter chart</h4>
