--- a/index.html
+++ b/index.html
@@ -255,23 +255,23 @@
               </ul>
               </div>
           </li-->
-          <!--li class="nav-item sidebar-actions">
+          <li class="nav-item sidebar-actions">
             <span class="nav-link">
               <div class="border-bottom">
-                <h6 class="font-weight-normal mb-3">Projects</h6>                
+                <h6 class="font-weight-normal mb-3">Pipelines</h6>
               </div>
-              <button class="btn btn-block btn-lg btn-gradient-primary mt-4">+ Add a project</button>
+              <button class="btn btn-block btn-lg btn-gradient-primary mt-4">+ Add a pipeline</button>
               <div class="mt-4">
                 <div class="border-bottom">
-                  <p class="text-secondary">Categories</p>                  
+                  <p class="text-secondary">Running</p>
                 </div>
                 <ul class="gradient-bullet-list mt-4">
-                  <li>Free</li>
-                  <li>Pro</li>
+                  <li>Accounting dept.</li>
+                  <li>Trading dept.</li>
                 </ul>
               </div>
             </span>
-          </li-->
+          </li>
         </ul>
       </nav>
       <!-- partial -->
