--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
         <a class="navbar-brand brand-logo" href="index.html"><img src="images/logo_new.jpeg" alt="logo"/></a>
-        <a class="navbar-brand brand-logo-mini" href="index.html"><img src="images/logo-mini.svg" alt="logo"/></a>
+        <a class="navbar-brand brand-logo-mini" href="index.html"><img src="images/logo_new.jpeg" alt="logo"/></a>
       </div>
       <div class="navbar-menu-wrapper d-flex align-items-stretch">
         <div class="search-field d-none d-md-block">
@@ -260,7 +260,7 @@
               <div class="border-bottom">
                 <h6 class="font-weight-normal mb-3">Pipelines</h6>
               </div>
-              <button class="btn btn-block btn-lg btn-gradient-primary mt-4">+ Add a pipeline</button>
+              <a class="btn btn-block btn-lg btn-gradient-primary mt-4" href="pages/forms/pipeline.html">+ Add a pipeline</a>
               <div class="mt-4">
                 <div class="border-bottom">
                   <p class="text-secondary">Running</p>
