--- a/pages/forms/pipeline.html
+++ b/pages/forms/pipeline.html
@@ -398,22 +398,23 @@
               <div class="card">
                 <div class="card-body">
                   <h4 class="card-title">New pipeline</h4>
-                  <p class="card-description">Select auto to generate a preset based on past data</p>
+                  <p class="card-description">Select auto to generate an new email template based on past data</p>
                   <form class="forms-sample">
                     <div class="form-group">
-                      <label for="exampleInputName1">Select Presets</label>
+                      <label for="exampleInputName1">Select Email Templates</label>
                       <select id=exampleInputName1 class="browser-default custom-select">
                         <option selected>Auto</option>
                         <option value="1">Custom 1</option>
                         <option value="2">Custom 2</option>
-                        <option value="3">+ New Preset</option>
+                        <option value="3">+ New Email Template</option>
                       </select>
                     </div>
 
                     <div class="form-group">
-                      <label for="exampleTextarea1">Department</label>
+                      <label for="exampleTextarea1">Department to Deploy Phishing Drill</label>
                       <input class="form-control" id="exampleTextarea1" rows="4" disabled value="Accounting"/>
                     </div>
+                    <p>Email Category</p>
                     <div class="form-group  checkbox-line" style="display: flex;">
                       <label for="cb1">Payment notice</label>
                       <input type="checkbox" class="form-control" id="cb1" rows="4" disabled checked/>
