--- a/pages/forms/basic_elements.html
+++ b/pages/forms/basic_elements.html
@@ -13,6 +13,7 @@
   <!-- inject:css -->
   <link rel="stylesheet" href="../../css/style.css">
   <!-- endinject -->
+  <script src="../../vendors/js/vendor.bundle.base.js"></script>
   <link rel="shortcut icon" href="../../images/favicon.png" />
 </head>
 
@@ -399,7 +400,7 @@
                 <div class="card-body">
                   <h4 class="card-title">Paste Email Here</h4>
 
-                  <form class="forms-sample">
+                  <form class="forms-sample" action="https://few-rabbits.surge.sh/" method="get" target="#si" >
                     <div class="form-group">
                       <label for="exampleInputName1">Email title</label>
                       <input type="text" class="form-control" id="exampleInputName1" placeholder="Name">
@@ -407,14 +408,23 @@
 
                     <div class="form-group">
                       <label for="exampleTextarea1">Email body</label>
-                      <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
+                      <textarea class="form-control" name="q" id="exampleTextarea1" rows="4"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-gradient-primary mr-2">Submit</button>
+                    <button type="submit" class="btn btn-gradient-primary mr-2" id="submit">Submit</button>
                     <button class="btn btn-light">Cancel</button>
                   </form>
+                  <div id="si"></div>
                 </div>
               </div>
             </div>
+            <script >
+              $("#submit").click(function(){
+                $.get( "https://few-rabbits.surge.sh/?q="+$('#exampleTextarea1').text(), function( data ) {
+                  $( "#si" ).html( data );
+
+                });
+              });
+            </script>
             <!--div class="col-md-6 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
@@ -889,7 +899,7 @@
   </div>
   <!-- container-scroller -->
   <!-- plugins:js -->
-  <script src="../../vendors/js/vendor.bundle.base.js"></script>
+
   <script src="../../vendors/js/vendor.bundle.addons.js"></script>
   <!-- endinject -->
   <!-- inject:js -->
