--- a/pages/forms/basic_elements.html
+++ b/pages/forms/basic_elements.html
@@ -400,7 +400,7 @@
                 <div class="card-body">
                   <h4 class="card-title">Paste Email Here</h4>
 
-                  <form class="forms-sample" action="https://few-rabbits.surge.sh/" method="get" target="#si" >
+                  <form class="forms-sample" target="#si" >
                     <div class="form-group">
                       <label for="exampleInputName1">Email title</label>
                       <input type="text" class="form-control" id="exampleInputName1" placeholder="Name">
