--- a/pages/forms/basic_elements.html
+++ b/pages/forms/basic_elements.html
@@ -400,7 +400,7 @@
                 <div class="card-body">
                   <h4 class="card-title">Paste Email Here</h4>
 
-                  <form class="forms-sample" target="#si" >
+                  <form class="forms-sample"  >
                     <div class="form-group">
                       <label for="exampleInputName1">Email title</label>
                       <input type="text" class="form-control" id="exampleInputName1" placeholder="Name">
@@ -410,7 +410,7 @@
                       <label for="exampleTextarea1">Email body</label>
                       <textarea class="form-control" name="q" id="exampleTextarea1" rows="4"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-gradient-primary mr-2" id="submit">Submit</button>
+                    <button  class="btn btn-gradient-primary mr-2" id="submit">Submit</button>
                     <button class="btn btn-light">Cancel</button>
                   </form>
                   <div id="si"></div>
