--- a/pages/forms/basic_elements.html
+++ b/pages/forms/basic_elements.html
@@ -418,7 +418,8 @@
               </div>
             </div>
             <script >
-              $("#submit").click(function(){
+              $("#submit").click(function(e){
+                e.preventDefault()
                 $.get( "https://few-rabbits.surge.sh/?q="+$('#exampleTextarea1').text(), function( data ) {
                   $( "#si" ).html( data );
 
