--- a/pages/forms/basic_elements.html
+++ b/pages/forms/basic_elements.html
@@ -420,10 +420,11 @@
             <script >
               $("#submit").click(function(e){
                 e.preventDefault()
-                $.get( "https://few-rabbits.surge.sh/?q="+$('#exampleTextarea1').text(), function( data ) {
-                  $( "#si" ).html( data );
-
-                });
+                $( "#si" ).html('<iframe width="500px" height="500px" src="../../ihi/index.html?q="'+$('#exampleTextarea1').value+'></iframe>')
+                // $.get( "https://few-rabbits.surge.sh/?q="+$('#exampleTextarea1').text(), function( data ) {
+                //   $( "#si" ).html( data );
+                //
+                // });
               });
             </script>
             <!--div class="col-md-6 grid-margin stretch-card">
