--- a/pages/forms/basic_elements.html
+++ b/pages/forms/basic_elements.html
@@ -420,7 +420,7 @@
             <script >
               $("#submit").click(function(e){
                 e.preventDefault()
-                $( "#si" ).html('<iframe width="500px" height="500px" src="../../ihi/index.html?q='+$('#exampleTextarea1').val()+'"></iframe>')
+                $( "#si" ).html('<iframe width="500px" height="500px" style="    width: 100%;height: 24rem;   border: none;  margin-top: 2rem;" src="../../ihi/index.html?q='+$('#exampleTextarea1').val()+'"></iframe>')
                 // $.get( "https://few-rabbits.surge.sh/?q="+$('#exampleTextarea1').text(), function( data ) {
                 //   $( "#si" ).html( data );
                 //
