--- a/pages/forms/basic_elements.html
+++ b/pages/forms/basic_elements.html
@@ -420,6 +420,7 @@
             <script >
               $("#submit").click(function(e){
                 e.preventDefault()
+                alert('The entry is added to the training database')
                 $( "#si" ).html('<iframe width="500px" height="500px" style="    width: 100%;height: 24rem;   border: none;  margin-top: 2rem;" src="../../ihi/index.html?q='+$('#exampleTextarea1').val()+'"></iframe>')
                 // $.get( "https://few-rabbits.surge.sh/?q="+$('#exampleTextarea1').text(), function( data ) {
                 //   $( "#si" ).html( data );
