add email client

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
               <span class="d-flex align-items-center purchase-popup">
                 <p>Have an email?</p>
                 <!--a-- href="https://github.com/BootstrapDash/PurpleAdmin-Free-Admin-Template" target="_blank" class="btn ml-auto download-button">Download Free Version</a-->
-                <a href="https://www.bootstrapdash.com/product/purple-bootstrap-4-admin-template/" target="_blank" class="btn ml-auto  purchase-button">Open the email client</a>
+                <a href="https://upbeat-ritchie-8564d4.netlify.com/" target="_blank" class="btn ml-auto  purchase-button">Open the email client</a>
                 <i class="mdi mdi-close popup-dismiss"></i>
               </span>
             </div>
