--- a/pages/forms/basic_elements.html
+++ b/pages/forms/basic_elements.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="../../css/style.css">
   <!-- endinject -->
   <script src="../../vendors/js/vendor.bundle.base.js"></script>
-  <link rel="shortcut icon" href="../../images/favicon.png" />
+  <link rel="shortcut icon" href="../../images/logo_new.jpeg" />
 </head>
 
 <body>
@@ -40,11 +40,11 @@
           <li class="nav-item nav-profile dropdown">
             <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
               <div class="nav-profile-img">
-                <img src="../../images/faces/face1.jpg" alt="image">
+                <img src="../../images/pp.jpeg" alt="image">
                 <span class="availability-status online"></span>             
               </div>
               <div class="nav-profile-text">
-                <p class="mb-1 text-black">David Greymaax</p>
+                <p class="mb-1 text-black">John Maaaaaaaaa</p>
               </div>
             </a>
             <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
@@ -188,11 +188,11 @@
           <li class="nav-item nav-profile">
             <a href="#" class="nav-link">
               <div class="nav-profile-image">
-                <img src="../../images/faces/face1.jpg" alt="profile">
+                <img src="../../images/pp.jpeg" alt="profile">
                 <span class="login-status online"></span> <!--change to offline or busy as needed-->              
               </div>
               <div class="nav-profile-text d-flex flex-column">
-                <span class="font-weight-bold mb-2">David Grey. H</span>
+                <span class="font-weight-bold mb-2">John Horse Ma</span>
                 <span class="text-secondary text-small">Project Manager</span>
               </div>
               <i class="mdi mdi-bookmark-check text-success nav-profile-badge"></i>
